; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_l_crc.c_CRC_ProcessString.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_l_crc.c_CRC_ProcessString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crctable = common dso_local global i16* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i16 @CRC_ProcessString(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i16, align 2
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = call i32 @CRC_Init(i16* %5)
  store i32 0, i32* %6, align 4
  br label %9

9:                                                ; preds = %42, %2
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %45

13:                                               ; preds = %9
  %14 = load i16, i16* %5, align 2
  %15 = zext i16 %14 to i32
  %16 = ashr i32 %15, 8
  %17 = load i8*, i8** %3, align 8
  %18 = load i32, i32* %6, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8, i8* %17, i64 %19
  %21 = load i8, i8* %20, align 1
  %22 = zext i8 %21 to i32
  %23 = xor i32 %16, %22
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* %7, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %29, label %26

26:                                               ; preds = %13
  %27 = load i32, i32* %7, align 4
  %28 = icmp sgt i32 %27, 256
  br i1 %28, label %29, label %30

29:                                               ; preds = %26, %13
  store i32 0, i32* %7, align 4
  br label %30

30:                                               ; preds = %29, %26
  %31 = load i16, i16* %5, align 2
  %32 = zext i16 %31 to i32
  %33 = shl i32 %32, 8
  %34 = load i16*, i16** @crctable, align 8
  %35 = load i32, i32* %7, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i16, i16* %34, i64 %36
  %38 = load i16, i16* %37, align 2
  %39 = zext i16 %38 to i32
  %40 = xor i32 %33, %39
  %41 = trunc i32 %40 to i16
  store i16 %41, i16* %5, align 2
  br label %42

42:                                               ; preds = %30
  %43 = load i32, i32* %6, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %6, align 4
  br label %9

45:                                               ; preds = %9
  %46 = load i16, i16* %5, align 2
  %47 = call zeroext i16 @CRC_Value(i16 zeroext %46)
  ret i16 %47
}

declare dso_local i32 @CRC_Init(i16*) #1

declare dso_local zeroext i16 @CRC_Value(i16 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
